--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -186,6 +186,11 @@ a:hover,
   width: 30px;
   height: 30px;
 }
+
+.icon-link img {
+  width: 28px;
+  height: 28px;
+}
 /* End About Page */
 
 /*  */
