other projects section

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -152,6 +152,11 @@ a:hover,
   width: 50%;
 }
 
+.otherProjects p {
+  font-size: 1.5rem;
+  font-family: $displayFont;
+}
+
  /* Video */  
   video {
   background-color: white;
