--- a/src/styles/_portfolioAll.scss
+++ b/src/styles/_portfolioAll.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 
   h2 {
     font-size: 3rem;
@@ -10,5 +11,17 @@
   &__lineBreak {
     align-self: center;
     width: 100px;
+  }
+
+  .portLink {
+    max-width: 100%;
+  }
+
+  @media only screen and (max-width : 900px) { 
+    
+    h2 {
+      font-size: 2rem;
+    }
+
   }
 }
