--- a/src/styles/_myspace.scss
+++ b/src/styles/_myspace.scss
@@ -12,6 +12,8 @@ $text-orange: #E06E36;
   display: flex;
   justify-content: center;
   background-color: $background-orange;
+  max-width: 100vw;
+  min-width: 100vw;
 }
 
 .myspace {
