--- a/src/styles/_myspace.scss
+++ b/src/styles/_myspace.scss
@@ -237,6 +237,12 @@ $text-orange: #E06E36;
     }
   }
 
+  .friendLink {
+    max-width: 96%;
+    width: 96%;
+    height: 100%;
+  }
+
 
 @media only screen and (max-width : 900px) {
   .mobile-only {
